# open-labs

./: .claudeignore  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/ai/: CONTEXT_RULES.md
labs/: conftest.py
labs/01-idempotent-payments/: CLAUDE.md  README.md  app.py  conftest.py  db.py  lab.py  models.py  requirements.txt  test_app.py
labs/02-webhook-processing/: CLAUDE.md  README.md  app.py  conftest.py  crypto.py  db.py  lab.py  models.py  test_app.py  test_crypto.py  test_helpers.py
labs/03-payment-state-machine/: CLAUDE.md  README.md  conftest.py  lab.py  state_machine.py  test_state_machine.py
labs/04-ledger-invariants/: CLAUDE.md  README.md  conftest.py  lab.py  ledger.py  test_ledger.py
labs/05-reconciliation-engine/: CLAUDE.md  README.md  conftest.py  lab.py  reconciler.py  test_reconciler.py
labs/06-retry-patterns/: CLAUDE.md  README.md  conftest.py  lab.py  resilient_client.py  test_resilient_client.py
labs/07-k8s-payment-deploy/: CLAUDE.md  Dockerfile  README.md  app.py  conftest.py  lab.py  test_app.py
labs/08-payment-monitoring/: CLAUDE.md  README.md  app.py  conftest.py  docker-compose.yml  lab.py  metrics.py  prometheus.yml  test_app.py
labs/09-async-settlement/: CLAUDE.md  README.md  conftest.py  lab.py  models.py  settlement.py  test_settlement.py
labs/10-event-driven-payments/: CLAUDE.md  README.md  conftest.py  event_store.py  lab.py  models.py  read_model.py  test_event_store.py
labs/11-api-contract-testing/: CLAUDE.md  README.md  client.py  conftest.py  lab.py  provider.py  schemas.py  test_contracts.py
labs/12-rate-limiter/: CLAUDE.md  README.md  conftest.py  lab.py  rate_limiter.py  test_rate_limiter.py
labs/13-terraform-basics/: CLAUDE.md  README.md  conftest.py  lab.py  main.tf  outputs.tf  test_terraform.py  variables.tf
labs/14-fraud-rule-engine/: CLAUDE.md  README.md  conftest.py  lab.py  (+3 more)
shared/: CLAUDE.md  conftest.py  helpers.py
(+13 files in other folders)
