[project]
name = "fintech-labs"
version = "0.1.0"
description = "Interactive concept labs for fintech backend engineering"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["labs", "dsa", "system-design", "compliance"]
pythonpath = [
    "labs/01-idempotent-payments",
    "labs/02-webhook-processing",
    "labs/03-payment-state-machine",
    "labs/04-ledger-invariants",
    "labs/05-reconciliation-engine",
    "labs/06-retry-patterns",
    "labs/07-k8s-payment-deploy",
    "labs/08-payment-monitoring",
    "labs/09-async-settlement",
    "labs/10-event-driven-payments",
    "labs/11-api-contract-testing",
    "labs/12-rate-limiter",
    "labs/13-terraform-basics",
    "labs/14-fraud-rule-engine",
    "labs/15-kyc-pipeline",
]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"**/lab.py" = ["E501"]
"**/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["lab\\.py$", "conftest\\.py$"]
